--- a/assets/scss/main.css
+++ b/assets/scss/main.css
@@ -25,6 +25,4 @@ section article:nth-of-type(1) {
 section article:nth-of-type(2) img {
   max-width: 200px;
   border-radius: 50%;
-}
-
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=main.css.map */
