--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -22,9 +22,22 @@ section {
 section article:nth-of-type(1) {
   width: 200px;
 }
+section article:nth-of-type(1) h2 {
+  text-shadow: 15px 10px 2px white;
+  background-color: rgba(255, 255, 255, 0.076);
+  filter: blur(0.7px);
+}
+section article:nth-of-type(2) {
+  z-index: -1;
+  height: 200px;
+  background-color: red;
+}
 section article:nth-of-type(2) img {
   max-width: 200px;
+  height: 100%;
   border-radius: 50%;
+  margin-left: -50px;
+  box-shadow: inset 5px 5px 5px orange;
 }
 
 /*# sourceMappingURL=style.css.map */
